--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
+<%- include('./partials/header') %>
     <a href="/skills">All Skills</a>
-  </body>
-</html>
+<%- include('./partials/footer') %>
