--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -1,22 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Express Skills</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-</head>
-<body>
-    <h1>Skills</h1>
-    <ul>
-      <% skills.forEach(function(s) { %>
-        <li>
-            <a href="/skills/<%= s.id %>"><%= s.skill %></a>
-            - 
-          <%= s.skills ? 'done' : 'not done' %>
-        </li>
-      <% }); %>
-    </ul>
-  </body>
-
-</html>
+<%- include('../partials/header') %>
+  <ul>
+  <a href="/skills/new">Add Skill</a>
+    <% skills.forEach(function(s) { %>
+      <li>
+          <a href="/skills/<%= s.id %>"><%= s.skill %></a>
+          - 
+        <%= s.skills ? 'done' : 'not done' %>
+      </li>
+    <% }); %>
+  </ul>
+<%- include('../partials/footer') %>
