add delete feature

--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -1,4 +1,9 @@
 <%- include('../partials/header') %>
     <h3><%= skill.skill %></h3>
     <h3>Complete: <%= skill.done ? 'Yes' : 'No' %></h3>
+
+    <form action="/skills/skill?_method=DELETE" class="delete-form" method="POST">
+        <button type="submit">Delete Skill</button>
+    </form>
+
 <%- include('../partials/footer') %>
