add edit feature

--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -2,6 +2,10 @@
     <h3><%= skill.skill %></h3>
     <h3>Complete: <%= skill.done ? 'Yes' : 'No' %></h3>
 
+    <form action="/skills/<%= skill.id %>/edit?_method=GET" class="edit-form" method="POST">
+        <button type="submit">Edit Skill</button>
+    </form>
+
     <form action="/skills/skill?_method=DELETE" class="delete-form" method="POST">
         <button type="submit">Delete Skill</button>
     </form>
