--- a/views/skills/edit.ejs
+++ b/views/skills/edit.ejs
@@ -2,9 +2,13 @@
 
 <h2>Edit <%= skill.skill %></h2>
 <form action="/skills/<%= skill.id %>?_method=PUT" method="POST" autocomplete="off">
-    <input type="text" name="name" value="<%= skill.name %>"
-    placeholder=<%=skill.skill%>>
+    <input type="text" name="name" value="<%= skill.skill %>"><br>
    
+    <label>
+      <input type="checkbox" name="done" <%= skill.done ? 'checked' : '' %>>
+      Completed
+    </label><br>
+
     <button type="submit">Update Skill</button>
   </form>
 
